--- a/menu-maker-frontend/src/App.css
+++ b/menu-maker-frontend/src/App.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+
 .App {
-  text-align: center;
+	text-align: center;
+	align-items: center;
+	overflow: hidden;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+#header-image {
+	height: 100vh;
+	background: url(./images/header-image.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+#header-image > #title-app-bar {
+	display: flex;
+	justify-content: flex-end;
+	padding: 10px;
+}
+#title-app-bar p {
+	margin: 0;
+	padding: 5px;
+}
+#title-app-bar a {
+	font-size: 20px;
+	color: white;
+	font-weight: 500;
+}
+#header-image > h1 {
+	color: teal;
+	text-transform: uppercase;
+	font-size: 40px;
+	text-align: center;
+	margin-top: 0;
+	padding: 30px;
+	padding-top: 30vh;
+	box-shadow: teal;
+}
+@media (max-width: 768px) {
+	#header-image > #title-app-bar {
+		justify-content: center;
+	}
 }
