--- a/menu-maker-frontend/src/App.css
+++ b/menu-maker-frontend/src/App.css
@@ -13,19 +13,19 @@
 	background-position: center;
 	background-repeat: no-repeat;
 }
-#header-image > #title-app-bar {
+.title-app-bar {
 	display: flex;
 	justify-content: flex-end;
 	padding: 10px;
 }
-#title-app-bar p {
+.title-app-bar p {
 	margin: 0;
 	padding: 5px;
+	color: white;
 }
-#title-app-bar a {
+.title-app-bar a {
 	font-size: 20px;
 	color: white;
-	font-weight: 500;
 }
 #header-image > h1 {
 	color: teal;
@@ -37,8 +37,53 @@
 	padding-top: 30vh;
 	box-shadow: teal;
 }
+#signin-container {
+	height: 100vh;
+	background: url(./images/header-image2.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+#signin-body {
+	height: 80%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#login-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 50%;
+	height: 65%;
+	transition: 0.3s;
+	border-radius: 20px;
+	opacity: 0.95;
+	background-color: #4b3d32;
+	padding: 50px;
+	box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+#login-card:hover {
+	box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.4);
+}
+#login-card .login-label {
+	text-align: center;
+	padding: 30px;
+	color: white;
+	font-size: 40px;
+}
+.text-button {
+	display: flex;
+	align-items: center;
+	border: none;
+	background-color: transparent;
+	color: white;
+}
 @media (max-width: 768px) {
-	#header-image > #title-app-bar {
+	.title-app-bar {
 		justify-content: center;
+	}
+	#login-card {
+		width: 90%;
 	}
 }
