--- a/menu-maker-frontend/src/App.css
+++ b/menu-maker-frontend/src/App.css
@@ -79,11 +79,15 @@
 	background-color: transparent;
 	color: white;
 }
+
 @media (max-width: 768px) {
 	.title-app-bar {
 		justify-content: center;
 	}
 	#login-card {
+		width: 90%;
+	}
+	.card {
 		width: 90%;
 	}
 }
