--- a/menu-maker-frontend/src/Routes/Dashboard.css
+++ b/menu-maker-frontend/src/Routes/Dashboard.css
@@ -12,26 +12,28 @@
 	margin: 0;
 }
 #dashboard > .title-app-bar > h1 {
-	margin: 0;
+	/* margin: 0; */
 	font-size: 30px;
 	text-transform: uppercase;
 }
 #dashboard > .title-app-bar > .appbar-buttons {
 	display: flex;
 	justify-content: center;
+	align-self: flex-end;
 }
-.create-menu {
+.button-class {
 	display: flex;
 	justify-content: center;
 	padding: 30px;
 }
-.create-menu a {
+.button-class a {
 	text-decoration: none;
 }
-.create-menu button {
+.button-class button {
 	background-color: teal;
+	color: white;
 }
-.create-menu button:hover {
+.button-class button:hover {
 	background-color: rgb(2, 102, 102);
 }
 .restaurant-name {
